--- a/package.json
+++ b/package.json
@@ -6,19 +6,17 @@
   "types": "main.d.ts",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build && pnpm copy-assets",
+    "build": "tsc && vite build",
     "preview": "vite preview",
-    "copy-assets": "cp package.json dist/ && cp README.md dist/",
     "release": "cd dist && pnpm publish --access public --no-git-checks"
-  },
-  "dependencies": {
   },
   "devDependencies": {
     "@types/node": "^18.6.4",
     "rollup": "^2.77.2",
     "rollup-plugin-typescript2": "^0.32.1",
     "typescript": "^4.6.4",
-    "vite": "^3.0.0"
+    "vite": "^3.0.0",
+    "vite-plugin-static-copy": "^0.7.0"
   },
   "author": "Teamy",
   "license": "ISC",
