--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
   "name": "@teamyapp/ext",
   "private": false,
-  "version": "0.0.2",
+  "version": "0.0.12",
   "main": "main.js",
-  "types": "main.d.ts",
+  "module": "main.es.js",
+  "typings": "main.d.ts",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "release": "cd dist && pnpm publish --access public --no-git-checks"
+    "release": "cd dist && yarn publish --access public --no-git-checks"
   },
   "devDependencies": {
     "@types/node": "^18.6.4",
+    "@types/react": "^18.2.48",
     "rollup": "^2.77.2",
     "rollup-plugin-typescript2": "^0.32.1",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
+    "vite-plugin-dts": "^3.7.1",
     "vite-plugin-static-copy": "^0.7.0"
   },
   "author": "Teamy",
