--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@teamyapp/ext",
   "private": false,
-  "version": "0.0.12",
+  "version": "0.0.15",
   "main": "main.js",
   "module": "main.es.js",
   "typings": "main.d.ts",
@@ -9,11 +9,10 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "release": "cd dist && yarn publish --access public --no-git-checks"
+    "release": "yarn build && cd dist && yarn publish --access public --no-git-checks"
   },
   "devDependencies": {
     "@types/node": "^18.6.4",
-    "@types/react": "^18.2.48",
     "rollup": "^2.77.2",
     "rollup-plugin-typescript2": "^0.32.1",
     "typescript": "^4.6.4",
