--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@teamyapp/ext",
   "private": false,
-  "version": "0.0.16",
+  "version": "0.0.23",
   "main": "main.js",
   "module": "main.es.js",
   "typings": "main.d.ts",
@@ -9,7 +9,10 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "release": "yarn build && cd dist && yarn publish --access public --no-git-checks"
+    "release:base": "yarn build && cd dist && yarn publish --access public --no-git-checks",
+    "release:github": "yarn release:base --registry https://npm.pkg.github.com",
+    "release:npm": "yarn release:base --registry https://registry.npmjs.org",
+    "release": "yarn release:github && yarn release:npm"
   },
   "devDependencies": {
     "@types/node": "^18.6.4",
